# basexx

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  memo.txt
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml-
benches/: ascii_bench1.rs  base32_bench1.rs  base32_i_bench1.rs  base56_bench1.rs  base58_b_bench1.rs  base58_bench1.rs  base58_r_bench1.rs  base64_bench1.rs  base64_g_bench1.rs  utils.rs
docs/: review.1.md  review.2.md
fixtures/: t1.data  t4.base32.ascii  t4.base32.pad.ascii  t4.base56.ascii  t4.base58.ascii  t4.base64.ascii  t4.base64.pad.ascii  t4.data  t8.data  tt.data
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: ags.rs  aligned_data.rs  ascii_graphic_set.rs  base32.rs  base32_i.rs  base32i.rs  base56.rs  base58.rs  base58_b.rs  base58_r.rs  base58b.rs  base58r.rs  base64.rs  base64_g.rs  base64g.rs  lib.rs  lib_bench.rs  test_main.rs  test_utils.rs
src/ags/: ags_128_avx2.rs  ags_128_ssse3.rs  ags_32_avx2.rs  ags_32_ssse3.rs  ags_64_avx2.rs  ags_64_ssse3.rs  ags_scalar.rs
src/ags/ags_128_avx2/: benches.rs  tests.rs
src/ags/ags_128_ssse3/: benches.rs  tests.rs
src/ags/ags_32_avx2/: benches.rs  tests.rs
src/ags/ags_32_ssse3/: benches.rs  tests.rs
src/ags/ags_64_avx2/: benches.rs  tests.rs
src/ags/ags_64_ssse3/: benches.rs  tests.rs
src/ags/ags_scalar/: benches.rs  tests.rs
src/ascii_graphic_set/: benches.rs  tests.rs
src/base32/: base32_avx2.rs  base32_scalar.rs  base32_ssse3.rs  tests.rs
src/base32/base32_avx2/: benches.rs  tests.rs
src/base32/base32_scalar/: benches.rs  tests.rs
src/base32/base32_ssse3/: benches.rs  tests.rs
src/base32i/: benches.rs  tests.rs
src/base56/: tests.rs
src/base58/: tests.rs
src/base58b/: benches.rs  tests.rs
src/base58r/: benches.rs  tests.rs
src/base64/: base64_avx2.rs  base64_scalar.rs  base64_ssse3.rs
src/base64/base64_avx2/: benches.rs  tests.rs
src/base64/base64_scalar/: benches.rs  tests.rs
src/base64/base64_ssse3/: benches.rs  tests.rs
src/base64g/: benches.rs  tests.rs
tests/: ascii_graphic_set_test1.rs  base32_i_test1.rs  base32_test1.rs  base56_test1.rs  base58_b_test1.rs  base58_r_test1.rs  base58_test1.rs  base64_g_test1.rs  base64_test1.rs  more_test1.rs  more_test2.rs  more_test3.rs  test1.rs  utils.rs
