[package]
name = "basexx"
version = "0.1.0"
edition = "2021"

[features]
defaults = []
rug = ["dep:rug"]

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
rug = { version="1.26", optional=true }

[dev-dependencies]
criterion = "0.5"
rstest = "0.23"
rstest_reuse = "0.7"

#[profile.bench]
#lto=true

[[bench]]
name = "base56_bench1"
harness = false

[[bench]]
name = "base58_bench1"
harness = false

#[[bench]]
#name = "base58_b_bench1"
#harness = false
#
#[[bench]]
#name = "base58_r_bench1"
#harness = false

[[bench]]
name = "base32_bench1"
harness = false

[[bench]]
name = "base64_bench1"
harness = false
