[package]
name = "basexx"
version = "0.1.1"
edition = "2021"
rust-version = "1.74.0"

authors = ["aki <aki.akaguma@hotmail.com>"]
description = "basexx utilities. base32, base64, base58, base56..."
keywords = ["base32", "base64", "base56", "base58", "no_std"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aki-akaguma/basexx"

[features]
defaults = []
aligned_data = []
#
# with libgmp
rug = ["dep:rug"]
#
bench = []
abench = ["bench"]
ubench = ["bench"]
nobench = []

dox = []
no_std = []

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
num-bigint = "0.4"
rug = { version="1.26", optional=true }

[dev-dependencies]
criterion = { version="0.7", default-features=false, features=["rayon"]}
rstest = "0.26"
rstest_reuse = "0.7"

[profile.bench]
#lto=true
#debug = true

[[bin]]
name = "basexx"
path = "src/test_main.rs"

[[bench]]
name = "lib_bench"
path = "src/lib_bench.rs"
harness = false
required-features = ["ubench"]

[[bench]]
name = "base56_bench1"
harness = false
required-features = ["abench"]

[[bench]]
name = "base58_bench1"
harness = false
required-features = ["abench"]

[[bench]]
name = "base32_bench1"
harness = false
required-features = ["abench"]

[[bench]]
name = "base64_bench1"
harness = false
required-features = ["abench"]

